# RSTE-DNA-Storage-CUDA

./: .gitattributes  .gitignore  README.md
.claude/: settings.local.json
docs/: Paper_Kelompok4.docx  paper_lncs.tex  result_summary.xlsx
prof/Both/: analyze_compare.py  result_summary.py
prof/Parallel/: analyze_nsight.py  cuda_internationale_paper.csv  cuda_ohenry_paper.csv  cuda_straybird_paper.csv  cuda_vangogh_paper.csv  report_internationale_paper.nsys-rep  report_internationale_paper.sqlite  report_ohenry_paper.nsys-rep  report_ohenry_paper.sqlite  report_straybird_paper.nsys-rep  report_straybird_paper.sqlite  report_vangogh_paper.nsys-rep  report_vangogh_paper.sqlite
prof/Sequential/: seq_internationale_paper.csv  seq_ohenry_paper.csv  seq_straybird_paper.csv  seq_vangogh_paper.csv
src/: CMakeLists.txt  build.ps1  build_all.cmd  constraints.cpp  constraints.cu  encode_kernel.cu  encoder.cpp  huffman.cpp  lsbm.cpp  lsbm_kernel.cu  main_cuda.cu  main_seq.cpp  metrics.cpp  rste_seq.hpp  run_all_experiments.ps1  run_compare.ps1  run_dataset.ps1  run_experiments.ps1  utils.cuh
src/dataset/: ohenry_paper.txt  straybird_paper.txt
